# CmakeVcpkg_Example

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  vcpkg.json
app/: CMakeLists.txt  main.cc
cmake/: Warnings.cmake
src/my_lib/: CMakeLists.txt
